# Detect-AI-Generated-Text

./: .gitignore  Detect_AI_Generated_Text.ipynb  LICENSE  Makefile  README.md  app.py  fastapi_app.py  pyproject.toml  streamlit_app.py
configs/: config.yaml
logs/: __init__.py
notebooks/: Detect_AI_Generated_Text.ipynb
src/: utils.py
src/data_handling/: build_features.py  gather_data.py  preprocess.py  splitting.py  validation.py
src/inference/: model_inference.py
src/modelling/: evaluate.py  hyperparameters_tuning.py  train.py
src/models/: evaluate.py  hyperparameters_tuning.py  train.py
src/pipelines/: data_pipeline.py  full_pipeline.py  modelling_pipeline.py
src/tests/test_data_handling/: test_build_features.py  test_gather_data.py  test_preprocess.py  test_splitting.py  test_validation.py
src/tests/test_fastapi_app/: test_app.py
src/tests/test_inference/: test_model_inference.py
src/tests/test_modelling/: test_evaluate.py  test_hyperparameter_tuning.py  test_train.py
src/tests/test_pipelines/: test_data_pipeline.py  test_full_pipeline.py  test_model_pipeline.py
