[tool.poetry]
name = "detect-ai-text"
version = "0.1.0"
description = "Project to detect whether an essay is AI generated or not"
authors = ["KimaniKibuthu <32309808+KimaniKibuthu@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
pyyaml = "^6.0.1"
pydantic = "^2.5.3"
sentencepiece = "^0.1.99"
lightgbm = "^4.2.0"
mlflow = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
